feat(users): surface a tasks_unavailable warning on degraded user reads
Add an optional warnings array to GetUserByIdResponse (omitted on the happy path) and a null taskIds when tasks-service is unavailable, mapped from the result's tasksAvailable flag via a package-private WarningCodes holder. Validated end-to-end in UserE2EIT.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>